// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render for active challenge 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Light",
                  "fontSize": 24,
                  "lineHeight": 30,
                },
              ]
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                },
              ]
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Details
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "fontSize": 16,
                },
              ]
            }
          >
            Add details to your Challenge (optional)
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`render for past challenge 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Light",
                  "fontSize": 24,
                  "lineHeight": 30,
                },
              ]
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
            />
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                },
              ]
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Details
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "fontSize": 16,
                },
              ]
            }
          >
            Add details to your Challenge (optional)
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders with details 1`] = `
<RCTScrollView>
  <View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "marginBottom": 80,
            "paddingVertical": 10,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "flex": 5,
              "flexDirection": "column",
              "justifyContent": "flex-start",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontFamily": "SourceSansPro-Light",
                  "fontSize": 24,
                  "lineHeight": 30,
                },
              ]
            }
          >
            Challenge Title
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Joined
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="joinedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#A0A2A6",
                    "fontSize": 12,
                    "lineHeight": 16,
                  },
                ]
              }
            >
              Completed
            </Text>
            <Text
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#3CC8E6",
                    "fontFamily": "SourceSansPro-ExtraLight",
                    "fontSize": 32,
                    "lineHeight": 38,
                  },
                ]
              }
              testID="completedCount"
            >
              1
            </Text>
          </View>
          <View
            style={
              Array [
                Object {},
                Object {
                  "flex": 1,
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          />
        </View>
        <View
          style={
            Array [
              Object {
                "borderBottomColor": "#ECEEF2",
                "borderBottomWidth": 1,
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#505256",
                  "fontSize": 16,
                },
              ]
            }
            testID="Text"
          >
            Sunday
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingHorizontal": 40,
                "paddingVertical": 14,
              },
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#A0A2A6",
                  "fontSize": 12,
                },
              ]
            }
          >
            Details
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "fontSize": 16,
                },
              ]
            }
          >
            Super cool details
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
